Ну-с, ебать нужно не только гётца, но и разрабов мавена. Ибо с форком мавен жуёт сообщения об ошибке от компилятора. Но гётца всё равно, ибо из-за него эти аргументы изначально пришлось добавлять (а разрабам мавена простой баг простителен).